# coderd/apidoc/swagger.json
@@ -7373,13 +7373,27 @@
     },
     "codersdk.WorkspaceAgentLifecycle": {
       "type": "string",
-      "enum": ["created", "starting", "start_timeout", "start_error", "ready"],
+      "enum": [
+        "created",
+        "starting",
+        "start_timeout",
+        "start_error",
+        "ready",
+        "shutting_down",
+        "shutdown_timeout",
+        "shutdown_error",
+        "off"
+      ],
       "x-enum-varnames": [
         "WorkspaceAgentLifecycleCreated",
         "WorkspaceAgentLifecycleStarting",
         "WorkspaceAgentLifecycleStartTimeout",
         "WorkspaceAgentLifecycleStartError",
-        "WorkspaceAgentLifecycleReady"
+        "WorkspaceAgentLifecycleReady",
+        "WorkspaceAgentLifecycleShuttingDown",
+        "WorkspaceAgentLifecycleShutdownTimeout",
+        "WorkspaceAgentLifecycleShutdownError",
+        "WorkspaceAgentLifecycleOff"
       ]
     },
     "codersdk.WorkspaceAgentListeningPort": {
